# ChwellCore

./: .gitignore  BENCHMARK_REPORT.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  deploy.sh  gateway.conf
.github/workflows/: ci.yml
cmake/: ProtobufGame.cmake
config/: cluster.yaml  server.conf  storage.yaml
examples/: echo_server.cpp  game_commands.h  game_components_demo.cpp  game_gateway_server.cpp  game_protobuf_demo.cpp  game_server.cpp  game_ws_components_demo.cpp  game_ws_server.cpp  game_ws_server_json  game_ws_server_json.cpp  game_ws_server_simple.cpp  gateway_server.cpp  http_server.cpp  json_frame_client.cpp  new_modules_demo.cpp  orm_example.cpp  proto_frame_client.cpp  proto_frame_server.cpp  protocol_server.cpp  protocol_stress_client.cpp  storage_example.cpp  sync_demo.cpp  ws_tcp_bridge.cpp
examples/h5_game/: README.md  index.html
include/chwell/aoi/: aoi.h
include/chwell/benchmark/: benchmark.h
include/chwell/circuitbreaker/: circuit_breaker.h
include/chwell/cluster/: node.h  node_registry.h
include/chwell/codec/: codec.h
include/chwell/core/: config.h  endian.h  logger.h  thread_pool.h  timer_wheel.h
include/chwell/discovery/: etcd_service_discovery.h  service_discovery.h
include/chwell/event/: event_bus.h
include/chwell/game/: game_components.h  player_move.h
include/chwell/gateway/: gateway_forwarder.h
include/chwell/http/: http_request.h  http_response.h  http_server.h
include/chwell/loadbalance/: consistent_hash.h  load_balancer.h
include/chwell/metrics/: prometheus_metrics.h
include/chwell/net/: connection.h  connection_adapter.h  connection_pool.h  net_interface.h  posix_io.h  socket_base.h  tcp_connection.h  tcp_server.h  tls.h  udp_server.h  udp_socket.h  ws_connection.h  ws_server.h
include/chwell/pool/: object_pool.h
include/chwell/protocol/: message.h  parser.h
include/chwell/ratelimit/: rate_limiter.h
include/chwell/redis/: distributed_lock.h  redis_client.h
include/chwell/reliability/: heartbeat.h  metrics.h  rate_limiter.h
include/chwell/rpc/: rpc_client.h  rpc_server.h
include/chwell/service/: component.h  protocol_router.h  service.h  session_component.h  session_manager.h
include/chwell/slg/: battle.h  map.h
include/chwell/storage/: async_storage_adapter.h  async_storage_interface.h  memory_storage.h  mongodb_storage.h  mysql_storage.h  storage_component.h  storage_config_loader.h  storage_factory.h  storage_interface.h  storage_types.h
include/chwell/storage/orm/: document.h  entity.h  repository.h
include/chwell/sync/: frame_sync.h  state_sync.h
include/chwell/task/: task_queue.h
integration_tests/: test_integration.cpp
scripts/: gen_proto.sh
src/aoi/: aoi.cpp
src/benchmark/: benchmark.cpp
src/circuitbreaker/: circuit_breaker.cpp
src/cluster/: node.cpp
src/codec/: codec.cpp
src/core/: config.cpp  logger.cpp  thread_pool.cpp  timer_wheel.cpp
src/discovery/: etcd_service_discovery.cpp  service_discovery.cpp
src/game/: game_components.cpp  player_move.cpp
src/gateway/: gateway_forwarder.cpp
src/http/: http_response.cpp  http_server.cpp
src/loadbalance/: consistent_hash.cpp  load_balancer.cpp
src/metrics/: prometheus_metrics.cpp
src/net/: connection_pool.cpp  posix_io.cpp  tcp_connection.cpp  tcp_server.cpp  tls.cpp  udp_server.cpp  udp_socket.cpp  ws_connection.cpp  ws_server.cpp
src/protocol/: message.cpp  parser.cpp
src/ratelimit/: rate_limiter.cpp
src/redis/: redis_client.cpp
src/rpc/: rpc_client.cpp  rpc_server.cpp
src/service/: protocol_router.cpp  service.cpp
src/slg/: battle.cpp  map.cpp
src/storage/: async_storage_adapter.cpp  memory_storage.cpp  mongodb_storage.cpp  mysql_storage.cpp  storage_component.cpp  storage_config_loader.cpp  storage_factory.cpp
src/storage/orm/: document.cpp
src/sync/: frame_sync.cpp  state_sync.cpp
src/task/: task_queue.cpp
tests/: mock_tcp_connection.h  mock_tcp_connection_v2.h  test_aoi.cpp  test_benchmark.cpp  test_circuitbreaker.cpp  test_consistent_hash.cpp  test_discovery_loadbalance.cpp  test_event_bus.cpp  test_game_components.cpp  test_gateway_multinode.cpp  test_object_pool.cpp  test_orm_repository.cpp  test_player_move.cpp  test_prometheus_metrics.cpp  test_protocol_parser.cpp  test_protocol_router.cpp  test_ratelimit.cpp  test_redis_client.cpp  test_rpc.cpp  test_session_manager.cpp  test_slg.cpp  test_storage.cpp  test_sync.cpp  test_task_queue.cpp  test_timer_wheel.cpp  test_udp_socket.cpp
